--- a/pawnshop/views/res_config_settings_views.xml
+++ b/pawnshop/views/res_config_settings_views.xml
@@ -28,7 +28,6 @@
                                     <div class="row mt-2">
                                         <label for="pawn_min_loan_amount" string="Min/Max Loan Amount" class="col-lg-3 o_light_label"/>
                                         <field name="pawn_min_loan_amount" class="oe_inline"/> to <field name="pawn_max_loan_amount" class="oe_inline"/>
-                                        <field name="currency_id" invisible="1"/>
                                     </div>
                                 </div>
                             </setting>
@@ -154,7 +153,7 @@
             <field name="name">Pawnshop Settings</field>
             <field name="res_model">res.config.settings</field>
             <field name="view_mode">form</field>
-            <field name="target">inline</field>
+            <field name="target">current</field>
             <field name="context">{'module': 'pawnshop'}</field>
         </record>
 
