--- a/pawnshop/views/pawn_dashboard_views.xml
+++ b/pawnshop/views/pawn_dashboard_views.xml
@@ -50,22 +50,14 @@
       </field>
     </record>
 
-  </data>
-</odoo>
-<?xml version="1.0" encoding="utf-8"?>
-<odoo>
-  <data>
-    <!-- Server action to open a fresh transient dashboard record -->
-    <record id="action_open_pawn_dashboard" model="ir.actions.server">
-      <field name="name">Open Dashboard</field>
-      <field name="state">code</field>
-      <field name="model_id" ref="base.model_ir_actions_server"/>
-      <field name="code">
-        action = env.ref('pawnshop.action_pawn_dashboard').read()[0]\n
-        rec = env['pawn.dashboard'].create({})\n
-        action['res_id'] = rec.id\n
-        result = action
-      </field>
+    <!-- Client Action for OWL Dashboard -->
+    <record id="action_pawn_dashboard_client" model="ir.actions.client">
+      <field name="name">Dashboard</field>
+      <field name="tag">pawnshop_dashboard</field>
+      <field name="target">current</field>
     </record>
+
+    
+
   </data>
 </odoo>
